// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FlowNavigationAvatar renders as BUSINESS profile type 1`] = `
<div
  class="tw-avatar tw-avatar--md tw-avatar--thumbnail tw-avatar--light"
>
  <div
    class="tw-avatar__content"
  >
    <img
      alt="avatar"
      src="https://wise.com"
    />
  </div>
</div>
`;

exports[`FlowNavigationAvatar renders as BUSINESS profile type with an icon 1`] = `
<div
  class="tw-avatar tw-avatar--md tw-avatar--icon tw-avatar--light"
>
  <div
    class="tw-avatar__content"
  >
    <span
      aria-hidden="true"
      class="tw-icon tw-icon-briefcase "
      role="presentation"
    >
      <svg
        fill="currentColor"
        focusable="false"
        height="16"
        width="16"
      >
        <path
          d="M7.5.2A2.8 2.8 0 004.7 3h1.6a1.2 1.2 0 011.2-1.2h1A1.2 1.2 0 019.7 3h1.6A2.8 2.8 0 008.5.2h-1z"
        />
        <path
          clip-rule="evenodd"
          d="M15.8 4.2H.2v11.6h15.6V4.2zm-14 10v-3.525c.044.048.089.095.134.14.953.954 1.942.985 2.066.985h2.5v.8h3v-.8c.844 0 1.69.02 2.534 0a1.803 1.803 0 00.208-.02c.124-.018.289-.051.48-.115a3.447 3.447 0 001.344-.85 4.22 4.22 0 00.134-.14V14.2H1.8zm7.7-4h2.484a1.165 1.165 0 00.231-.053c.178-.059.442-.185.72-.463.493-.493 1.126-1.567 1.245-3.884H1.82c.12 2.317.752 3.39 1.246 3.884.462.463.899.512.948.516H6.5v-.8h3v.8z"
          fill-rule="evenodd"
        />
      </svg>
    </span>
  </div>
</div>
`;

exports[`FlowNavigationAvatar renders as PERSONAL profile type 1`] = `
<div
  class="tw-avatar tw-avatar--md tw-avatar--thumbnail tw-avatar--light"
>
  <div
    class="tw-avatar__content"
  >
    <img
      alt="avatar"
      src="https://wise.com"
    />
  </div>
</div>
`;

exports[`FlowNavigationAvatar renders as PERSONAL profile type with an icon 1`] = `
<div
  class="tw-avatar tw-avatar--md tw-avatar--icon tw-avatar--light"
>
  <div
    class="tw-avatar__content"
  >
    <span
      aria-hidden="true"
      class="tw-icon tw-icon-profile "
      role="presentation"
    >
      <svg
        fill="currentColor"
        focusable="false"
        height="16"
        width="16"
      >
        <path
          clip-rule="evenodd"
          d="M8 0C5.847 0 4.102 1.723 4.102 3.848S5.847 7.696 8 7.696c2.152 0 3.897-1.723 3.897-3.848S10.152 0 8 0zM5.743 3.848c0-1.23 1.01-2.228 2.257-2.228 1.246 0 2.256.998 2.256 2.228 0 1.23-1.01 2.228-2.256 2.228-1.246 0-2.257-.997-2.257-2.228z"
          fill-rule="evenodd"
        />
        <path
          d="M8 9.127c2.487 0 4.604.858 5.967 1.595 1.391.752 2.033 2.22 2.033 3.644V16h-1.641v-1.634c0-.981-.435-1.82-1.18-2.223-1.225-.662-3.065-1.396-5.179-1.396-2.114 0-3.954.734-5.179 1.396-.745.402-1.18 1.242-1.18 2.223V16H0v-1.634c0-1.424.642-2.892 2.033-3.644C3.396 9.985 5.513 9.127 8 9.127z"
        />
      </svg>
    </span>
  </div>
</div>
`;
